--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_info.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_info.xml
@@ -1,17 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
+    android:autoMirrored="true"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M12,3.651C7.389,3.651 3.651,7.389 3.651,12C3.651,16.611 7.389,20.349 12,20.349C16.611,20.349 20.349,16.611 20.349,12C20.349,7.389 16.611,3.651 12,3.651ZM2,12C2,6.477 6.477,2 12,2C17.523,2 22,6.477 22,12C22,17.523 17.523,22 12,22C6.477,22 2,17.523 2,12Z"
-      android:fillColor="#5159F6"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M10.41,11.236C10.41,10.78 10.78,10.41 11.236,10.41H12C12.456,10.41 12.826,10.78 12.826,11.236V15.764C13.253,15.795 13.59,16.152 13.59,16.587C13.59,17.043 13.22,17.413 12.764,17.413H12C11.544,17.413 11.174,17.043 11.174,16.587V12.059C10.747,12.028 10.41,11.671 10.41,11.236Z"
-      android:fillColor="#5159F6"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M11.809,8.942C12.442,8.942 12.956,8.428 12.956,7.795C12.956,7.162 12.442,6.648 11.809,6.648C11.175,6.648 10.662,7.162 10.662,7.795C10.662,8.428 11.175,8.942 11.809,8.942Z"
-      android:fillColor="#5159F6"/>
+    <path
+        android:fillColor="#5159F6"
+        android:fillType="evenOdd"
+        android:pathData="M12,3.651C7.389,3.651 3.651,7.389 3.651,12C3.651,16.611 7.389,20.349 12,20.349C16.611,20.349 20.349,16.611 20.349,12C20.349,7.389 16.611,3.651 12,3.651ZM2,12C2,6.477 6.477,2 12,2C17.523,2 22,6.477 22,12C22,17.523 17.523,22 12,22C6.477,22 2,17.523 2,12Z" />
+    <path
+        android:fillColor="#5159F6"
+        android:fillType="evenOdd"
+        android:pathData="M10.41,11.236C10.41,10.78 10.78,10.41 11.236,10.41H12C12.456,10.41 12.826,10.78 12.826,11.236V15.764C13.253,15.795 13.59,16.152 13.59,16.587C13.59,17.043 13.22,17.413 12.764,17.413H12C11.544,17.413 11.174,17.043 11.174,16.587V12.059C10.747,12.028 10.41,11.671 10.41,11.236Z" />
+    <path
+        android:fillColor="#5159F6"
+        android:pathData="M11.809,8.942C12.442,8.942 12.956,8.428 12.956,7.795C12.956,7.162 12.442,6.648 11.809,6.648C11.175,6.648 10.662,7.162 10.662,7.795C10.662,8.428 11.175,8.942 11.809,8.942Z" />
 </vector>
