--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_members.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_members.xml
@@ -1,19 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="32dp"
     android:height="32dp"
+    android:autoMirrored="true"
     android:viewportWidth="32"
     android:viewportHeight="32">
 
-  <path
-      android:pathData="M14.981,11.556C14.981,13.243 13.613,14.611 11.926,14.611C10.238,14.611 8.87,13.243 8.87,11.556C8.87,9.868 10.238,8.5 11.926,8.5C13.613,8.5 14.981,9.868 14.981,11.556Z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M23.129,11.556C23.129,13.243 21.761,14.611 20.074,14.611C18.386,14.611 17.018,13.243 17.018,11.556C17.018,9.868 18.386,8.5 20.074,8.5C21.761,8.5 23.129,9.868 23.129,11.556Z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M20.005,22.759C19.466,22.759 19.055,22.28 19.055,21.741C19.055,21.024 18.95,20.333 18.753,19.68C18.347,18.333 18.667,16.648 20.074,16.648C22.886,16.648 25.166,18.928 25.166,21.741C25.166,22.303 24.71,22.759 24.148,22.759H20.005Z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M11.926,16.648C14.738,16.648 17.018,18.928 17.018,21.741C17.018,22.303 16.562,22.759 16,22.759H7.852C7.289,22.759 6.833,22.303 6.833,21.741C6.833,18.928 9.113,16.648 11.926,16.648Z"
-      android:fillColor="#ffffff"/>
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M14.981,11.556C14.981,13.243 13.613,14.611 11.926,14.611C10.238,14.611 8.87,13.243 8.87,11.556C8.87,9.868 10.238,8.5 11.926,8.5C13.613,8.5 14.981,9.868 14.981,11.556Z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M23.129,11.556C23.129,13.243 21.761,14.611 20.074,14.611C18.386,14.611 17.018,13.243 17.018,11.556C17.018,9.868 18.386,8.5 20.074,8.5C21.761,8.5 23.129,9.868 23.129,11.556Z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M20.005,22.759C19.466,22.759 19.055,22.28 19.055,21.741C19.055,21.024 18.95,20.333 18.753,19.68C18.347,18.333 18.667,16.648 20.074,16.648C22.886,16.648 25.166,18.928 25.166,21.741C25.166,22.303 24.71,22.759 24.148,22.759H20.005Z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M11.926,16.648C14.738,16.648 17.018,18.928 17.018,21.741C17.018,22.303 16.562,22.759 16,22.759H7.852C7.289,22.759 6.833,22.303 6.833,21.741C6.833,18.928 9.113,16.648 11.926,16.648Z" />
 </vector>
