--- a/SceytChatUiKit/src/main/res/drawable/sceyt_radio_button_checked_state.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_radio_button_checked_state.xml
@@ -3,14 +3,14 @@
     android:height="22dp"
     android:viewportWidth="20"
     android:viewportHeight="20">
-  <path
-      android:pathData="M10,10m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0"
-      android:fillColor="@color/sceyt_color_accent"/>
-  <path
-      android:pathData="M15.3334,6L8,13.3333L4.6667,10"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.4"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
+    <path
+        android:fillColor="@color/sceyt_color_accent"
+        android:pathData="M10,10m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M15.3334,6L8,13.3333L4.6667,10"
+        android:strokeWidth="1.4"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
