--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_admin.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_admin.xml
@@ -2,6 +2,7 @@
     android:width="32dp"
     android:height="32dp"
     android:viewportWidth="32"
+    android:autoMirrored="true"
     android:viewportHeight="32">
 
     <path
