--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_forward.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_forward.xml
@@ -1,14 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
+    android:autoMirrored="true"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M19.685,9.492C19.685,8.859 19.172,8.346 18.539,8.346H8.365C5.028,8.346 2.4,11.148 2.4,14.506C2.4,17.865 5.028,20.666 8.365,20.666H10.614C11.247,20.666 11.76,20.153 11.76,19.52C11.76,18.887 11.247,18.374 10.614,18.374H8.365C6.379,18.374 4.692,16.686 4.692,14.506C4.692,12.327 6.379,10.638 8.365,10.638H18.539C19.172,10.638 19.685,10.125 19.685,9.492Z"
-      android:fillColor="@color/sceyt_color_accent"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M14.879,3.668C14.431,4.115 14.43,4.84 14.877,5.288L19.119,9.544L14.877,13.8C14.43,14.248 14.431,14.974 14.879,15.421C15.328,15.868 16.053,15.866 16.5,15.418L21.549,10.353C21.994,9.906 21.994,9.182 21.549,8.735L16.5,3.67C16.053,3.222 15.328,3.221 14.879,3.668Z"
-      android:fillColor="@color/sceyt_color_accent"
-      android:fillType="evenOdd"/>
+    <path
+        android:fillColor="@color/sceyt_color_accent"
+        android:fillType="evenOdd"
+        android:pathData="M19.685,9.492C19.685,8.859 19.172,8.346 18.539,8.346H8.365C5.028,8.346 2.4,11.148 2.4,14.506C2.4,17.865 5.028,20.666 8.365,20.666H10.614C11.247,20.666 11.76,20.153 11.76,19.52C11.76,18.887 11.247,18.374 10.614,18.374H8.365C6.379,18.374 4.692,16.686 4.692,14.506C4.692,12.327 6.379,10.638 8.365,10.638H18.539C19.172,10.638 19.685,10.125 19.685,9.492Z" />
+    <path
+        android:fillColor="@color/sceyt_color_accent"
+        android:fillType="evenOdd"
+        android:pathData="M14.879,3.668C14.431,4.115 14.43,4.84 14.877,5.288L19.119,9.544L14.877,13.8C14.43,14.248 14.431,14.974 14.879,15.421C15.328,15.868 16.053,15.866 16.5,15.418L21.549,10.353C21.994,9.906 21.994,9.182 21.549,8.735L16.5,3.67C16.053,3.222 15.328,3.221 14.879,3.668Z" />
 </vector>
