--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_reply.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_reply.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="19.636364dp"
+    android:autoMirrored="true"
     android:viewportWidth="22"
     android:viewportHeight="18">
     <path
