Fix UI issue calculation reply message container with and message reaction width.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
@@ -116,14 +116,14 @@
             android:layout_height="@dimen/messageProgressSize"
             android:padding="1dp"
             android:visibility="gone"
-            app:sceytUiProgressBackgroundColor="@color/sceyt_color_overlay_background_2"
-            app:sceytUiProgressIconSizeInPercent="65"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/fileImage"
-            app:sceytUiProgressMinProgress="2"
+            app:sceytUiProgressBackgroundColor="@color/sceyt_color_overlay_background_2"
             app:sceytUiProgressColor="@color/sceyt_color_on_primary"
+            app:sceytUiProgressIconSizeInPercent="65"
+            app:sceytUiProgressMinProgress="2"
             app:sceytUiProgressTrackColor="@android:color/transparent"
             tools:visibility="visible" />
 
@@ -136,8 +136,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:sceytUiDecoratedTextColor="@color/sceyt_color_text_secondary"
-            app:sceytUiDecoratedTextSize="@dimen/tinyTextSize"
             app:sceytUiDecoratedTextHighlighted="true"
+            app:sceytUiDecoratedTextSize="@dimen/tinyTextSize"
             app:sceytUiDecoratedTextTrailingIconPadding="5dp"
             app:sceytUiDecoratedTextTrailingIconSize="15.5dp"
             tools:sceytUiDecoratedTextTitle="00:37"
@@ -150,6 +150,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="-5dp"
+        android:layout_marginEnd="3dp"
         android:layout_marginBottom="2dp"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:visibility="gone"
