--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_attachments_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_attachments_message.xml
@@ -131,6 +131,7 @@
         android:layout_below="@+id/layoutDetails"
         android:layout_alignStart="@id/layoutDetails"
         android:layout_marginTop="-5dp"
+        android:layout_marginEnd="3dp"
         android:layout_marginBottom="2dp"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:orientation="horizontal"
