--- a/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
@@ -1,196 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutToolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/sceyt_color_primary"
+        android:paddingHorizontal="15dp"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layoutToolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
-            android:background="@color/sceyt_color_primary"
-            android:paddingHorizontal="15dp"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/profile"
-                android:textColor="@color/sceyt_color_text_primary"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ivEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:src="@drawable/ic_edit"
-                android:tint="@color/sceyt_color_accent"
-                app:layout_constraintBottom_toBottomOf="@+id/title"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/title" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <View
-            android:id="@+id/underline"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/sceyt_color_border"
-            app:layout_constraintTop_toBottomOf="@+id/layoutToolbar" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/sceyt_color_background_secondary"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/profile"
+            android:textColor="@color/sceyt_color_text_primary"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/underline">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layoutUserDetails"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/sceyt_color_primary"
-                android:padding="16dp"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <com.sceyt.chatuikit.presentation.custom_views.AvatarView
-                    android:id="@+id/avatar"
-                    android:layout_width="72dp"
-                    android:layout_height="72dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:sceytUiAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
-                    app:sceytUiAvatarTextSize="@dimen/extraLargeTextSize"
-                    tools:sceytUiAvatarFullName="User name" />
-
-                <ProgressBar
-                    android:id="@+id/loadingProfileImage"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="@+id/avatar"
-                    app:layout_constraintEnd_toEndOf="@+id/avatar"
-                    app:layout_constraintStart_toStartOf="@+id/avatar"
-                    app:layout_constraintTop_toTopOf="@+id/avatar" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/displayName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/roboto_medium"
-                    android:includeFontPadding="false"
-                    android:maxLines="1"
-                    android:paddingVertical="5dp"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/sceyt_color_text_primary"
-                    android:textColorHint="@color/sceyt_color_text_footnote"
-                    android:textSize="@dimen/bigTextSize"
-                    app:layout_constraintBottom_toTopOf="@+id/tvStatus"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0"
-                    app:layout_constraintStart_toEndOf="@+id/avatar"
-                    app:layout_constraintTop_toTopOf="@+id/avatar"
-                    app:layout_constraintVertical_chainStyle="packed"
-                    tools:text="John" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvStatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="12dp"
-                    android:lines="1"
-                    android:text="@string/sceyt_online"
-                    android:textColor="@color/sceyt_color_text_secondary"
-                    android:textSize="15sp"
-                    app:layout_constraintBottom_toBottomOf="@id/avatar"
-                    app:layout_constraintHorizontal_bias="0"
-                    app:layout_constraintStart_toEndOf="@id/avatar"
-                    app:layout_constraintTop_toBottomOf="@+id/displayName" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchNotifications"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@color/sceyt_color_primary"
-                android:drawableStart="@drawable/sceyt_ic_notification_with_layers"
-                android:drawablePadding="12dp"
-                android:includeFontPadding="false"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
-                android:text="@string/sceyt_notifications"
-                android:textColor="@color/sceyt_color_text_primary"
-                android:textSize="@dimen/mediumTextSize"
-                android:theme="@style/SceytSwitchStyle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/layoutUserDetails" />
-
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/sceyt_color_border"
-                app:layout_constraintTop_toBottomOf="@+id/switchNotifications" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchTheme"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:background="@color/sceyt_color_primary"
-                android:drawableStart="@drawable/ic_theme"
-                android:drawablePadding="12dp"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
-                android:saveEnabled="false"
-                android:text="@string/dark_theme"
-                android:textColor="@color/sceyt_color_text_primary"
-                android:textSize="@dimen/mediumTextSize"
-                android:theme="@style/SceytSwitchStyle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/divider" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height=".5dp"
-                android:background="@color/sceyt_color_border"
-                app:layout_constraintTop_toBottomOf="@+id/switchTheme" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/logout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@color/sceyt_color_primary"
-                android:foreground="?android:selectableItemBackground"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="16dp"
-                android:text="@string/log_out"
-                android:textColor="@color/sceyt_color_warning"
-                android:textSize="@dimen/mediumTextSize"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/switchNotifications"
-                app:layout_constraintTop_toBottomOf="@id/switchTheme"
-                tools:ignore="UnusedAttribute" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:src="@drawable/ic_edit"
+            android:tint="@color/sceyt_color_accent"
+            app:layout_constraintBottom_toBottomOf="@+id/title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</layout>
+    <View
+        android:id="@+id/underline"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/sceyt_color_border"
+        app:layout_constraintTop_toBottomOf="@+id/layoutToolbar" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/sceyt_color_background_secondary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/underline">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutUserDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/sceyt_color_primary"
+            android:padding="16dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.sceyt.chatuikit.presentation.custom_views.AvatarView
+                android:id="@+id/avatar"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:sceytUiAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
+                app:sceytUiAvatarTextSize="@dimen/extraLargeTextSize"
+                tools:sceytUiAvatarFullName="User name" />
+
+            <ProgressBar
+                android:id="@+id/loadingProfileImage"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/avatar"
+                app:layout_constraintEnd_toEndOf="@+id/avatar"
+                app:layout_constraintStart_toStartOf="@+id/avatar"
+                app:layout_constraintTop_toTopOf="@+id/avatar" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/displayName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/roboto_medium"
+                android:includeFontPadding="false"
+                android:maxLines="1"
+                android:paddingVertical="5dp"
+                android:textAlignment="textStart"
+                android:textColor="@color/sceyt_color_text_primary"
+                android:textColorHint="@color/sceyt_color_text_footnote"
+                android:textSize="@dimen/bigTextSize"
+                app:layout_constraintBottom_toTopOf="@+id/tvStatus"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toEndOf="@+id/avatar"
+                app:layout_constraintTop_toTopOf="@+id/avatar"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="John" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:lines="1"
+                android:text="@string/sceyt_online"
+                android:textColor="@color/sceyt_color_text_secondary"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="@id/avatar"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toEndOf="@id/avatar"
+                app:layout_constraintTop_toBottomOf="@+id/displayName" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchNotifications"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@color/sceyt_color_primary"
+            android:drawableStart="@drawable/sceyt_ic_notification_with_layers"
+            android:drawablePadding="12dp"
+            android:includeFontPadding="false"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="12dp"
+            android:text="@string/sceyt_notifications"
+            android:textColor="@color/sceyt_color_text_primary"
+            android:textSize="@dimen/mediumTextSize"
+            android:theme="@style/SceytSwitchStyle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/layoutUserDetails" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/sceyt_color_border"
+            app:layout_constraintTop_toBottomOf="@+id/switchNotifications" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchTheme"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="@color/sceyt_color_primary"
+            android:drawableStart="@drawable/ic_theme"
+            android:drawablePadding="12dp"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="12dp"
+            android:saveEnabled="false"
+            android:text="@string/dark_theme"
+            android:textColor="@color/sceyt_color_text_primary"
+            android:textSize="@dimen/mediumTextSize"
+            android:theme="@style/SceytSwitchStyle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height=".5dp"
+            android:background="@color/sceyt_color_border"
+            app:layout_constraintTop_toBottomOf="@+id/switchTheme" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/logout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@color/sceyt_color_primary"
+            android:foreground="?android:selectableItemBackground"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="16dp"
+            android:text="@string/log_out"
+            android:textColor="@color/sceyt_color_warning"
+            android:textSize="@dimen/mediumTextSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/switchNotifications"
+            app:layout_constraintTop_toBottomOf="@id/switchTheme"
+            tools:ignore="UnusedAttribute" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
