--- a/SceytChatUiKit/src/main/res/layout/sceyt_page_loading_state.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_page_loading_state.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent">
 
     <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="?android:attr/actionBarSize"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center" />
 
 </FrameLayout>
