--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channels.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channels.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -71,13 +72,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="16dp"
-            android:backgroundTint="@color/colorAccent"
             android:importantForAccessibility="no"
             android:src="@drawable/sceyt_ic_edit"
             app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
             app:layout_constraintBottom_toBottomOf="@+id/viewPager"
             app:layout_constraintEnd_toEndOf="parent"
-            app:tint="@color/sceyt_color_on_primary" />
+            app:tint="@color/sceyt_color_on_primary"
+            tools:backgroundTint="@color/colorAccent" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
