--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_reactions_recycler_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_reactions_recycler_view.xml
@@ -5,13 +5,13 @@
     android:id="@+id/rvReactions"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/sceyt_bg_corners_20"
-    android:backgroundTint="@color/sceyt_color_background_sections"
     android:elevation="1dp"
     android:layoutDirection="ltr"
     android:orientation="horizontal"
     android:paddingHorizontal="6dp"
     android:paddingVertical="2dp"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    tools:background="@drawable/sceyt_bg_corners_20"
+    tools:backgroundTint="@color/sceyt_color_background_sections"
     tools:itemCount="5"
     tools:listitem="@layout/sceyt_item_reaction" />
