--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_link_preview.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_link_preview.xml
@@ -2,30 +2,14 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
-    tools:showIn="@layout/sceyt_message_input_view">
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <View
         android:id="@+id/viewTopLinkPreview"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginBottom="10dp"
         android:background="@color/sceyt_color_border"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineTop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="10dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineBottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="10dp" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/icLinkImage"
@@ -34,9 +18,9 @@
         android:layout_marginStart="16dp"
         android:background="@drawable/sceyt_bg_link"
         android:scaleType="center"
-        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
+        app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/SceytShapeAppearanceOverlay.CornerSize8"
         app:srcCompat="@drawable/sceyt_ic_link" />
 
@@ -54,9 +38,9 @@
         app:layout_constraintEnd_toStartOf="@+id/icClose"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icLinkImage"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
+        app:layout_constraintTop_toBottomOf="@+id/viewTopLinkPreview"
         app:layout_constraintVertical_chainStyle="packed"
-        app:layout_goneMarginTop="0dp"
+        app:layout_goneMarginBottom="10dp"
         tools:text="https://www.youtube.com/watch?v=sLxN" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -65,11 +49,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:layout_marginTop="4dp"
+        android:layout_marginBottom="10dp"
         android:ellipsize="end"
         android:singleLine="true"
         android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="13sp"
-        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/icClose"
         app:layout_constraintStart_toEndOf="@+id/icLinkImage"
         app:layout_constraintTop_toBottomOf="@+id/tvLinkUrl"
@@ -82,9 +67,9 @@
         android:layout_marginEnd="16dp"
         android:padding="6dp"
         android:scaleType="center"
-        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sceyt_ic_cancel" />
 
 </merge>
