--- a/SceytChatUiKit/src/main/res/layout/sceyt_media_item_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_media_item_video.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:resize_mode="fixed_width"
+        app:resize_mode="fit"
         app:repeat_toggle_modes="none"
         app:surface_type="texture_view"
         app:show_timeout="0"
