--- a/SceytChatUiKit/src/main/res/layout/sceyt_media_item_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_media_item_video.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <androidx.media3.ui.PlayerView
         android:id="@+id/videoView"
@@ -14,10 +15,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:resize_mode="fit"
         app:repeat_toggle_modes="none"
-        app:surface_type="texture_view"
+        app:resize_mode="fit"
         app:show_timeout="0"
+        app:surface_type="texture_view"
         app:use_controller="true" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -31,15 +32,15 @@
         android:layout_height="wrap_content"
         android:padding="3dp"
         android:visibility="gone"
-        app:sceytUiProgressBackgroundColor="@color/sceyt_color_overlay_background_2"
-        app:sceytUiProgressIconSizeInPercent="65"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent=".16"
-        app:sceytUiProgressMinProgress="2"
+        app:sceytUiProgressBackgroundColor="@color/sceyt_color_overlay_background_2"
         app:sceytUiProgressColor="@color/sceyt_color_on_primary"
+        app:sceytUiProgressIconSizeInPercent="65"
+        app:sceytUiProgressMinProgress="2"
         app:sceytUiProgressRotateAnimEnabled="false"
         app:sceytUiProgressTrackColor="@android:color/transparent" />
 
