--- a/SceytChatUiKit/src/main/res/drawable/sceyt_bg_ripple_corners_20.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_bg_ripple_corners_20.xml
@@ -1,8 +1,9 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?colorControlHighlight">
-    <item>
+    android:color="?android:colorControlHighlight">
+
+    <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/sceyt_color_accent" />
+            <solid android:color="#000000" />
             <corners android:radius="20dp" />
         </shape>
     </item>
