--- a/SceytChatUiKit/src/main/res/layout/sceyt_messages_list_header_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_messages_list_header_view.xml
@@ -138,9 +138,7 @@
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toEndOf="@+id/tvUserActivity"
                         app:layout_constraintTop_toTopOf="@+id/tvUserActivity"
-                        app:lottie_autoPlay="true"
-                        app:lottie_loop="true"
-                        app:lottie_rawRes="@raw/sceyt_typing" />
+                        app:lottie_loop="true" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
