- Migrated to target API 35

--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_choose_role.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_choose_role.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".presentation.components.role.ChangeRoleActivity"
-    android:background="@color/sceyt_color_background">
+    android:background="@color/sceyt_color_background"
+    tools:context=".presentation.components.role.ChangeRoleActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutToolbar"
