- Revert statusBarIconsColorWithBackground method. - Improve logic to set ChannelInfoActivity divider color.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_info_description.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_info_description.xml
@@ -51,11 +51,12 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Space
-        android:id="@+id/space"
+    <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
+        tools:background="@color/sceyt_color_background_secondary"
         tools:layout_height="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
