--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_info_options.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_info_options.xml
@@ -95,11 +95,12 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Space
-        android:id="@+id/space"
+    <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/searchMessages"
+        tools:background="@color/sceyt_color_background_secondary"
         tools:layout_height="16dp" />
 
 </LinearLayout>
