--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
@@ -68,7 +68,6 @@
         android:textColor="@color/sceyt_color_text_primary"
         android:textSize="@dimen/mediumTextSize"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toTopOf="@+id/lastMessage"
         app:layout_constraintEnd_toStartOf="@+id/dateStatus"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/avatar"
@@ -91,11 +90,12 @@
         android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="@dimen/smallTextSize"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toBottomOf="@+id/avatar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/icPinned"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@+id/channelTitle"
         app:layout_constraintTop_toBottomOf="@+id/channelTitle"
+        app:layout_constraintVertical_bias="0"
         tools:text="Description" />
 
     <View
