--- a/SceytChatUiKit/src/main/res/layout/sceyt_messages_list_header_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_messages_list_header_view.xml
@@ -43,8 +43,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="?selectableItemBackground"
-                android:paddingStart="16dp"
-                android:paddingEnd="12dp"
+                android:paddingHorizontal="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/icBack"
@@ -65,7 +64,7 @@
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="12dp"
+                    android:layout_marginStart="12dp"
                     android:fontFamily="@font/roboto_medium"
                     android:singleLine="true"
                     android:textColor="@color/sceyt_color_text_primary"
@@ -83,7 +82,6 @@
                     android:id="@+id/layoutSubTitle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="12dp"
                     android:animateLayoutChanges="true"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
